--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
     <h1>Ayishah Chaudhry's Portal</h1>
 
     <h2>About Me</h2>
-    <p>I am a student at FAST University.</p>
-    <p>It is also known as National University of Computer and Emerging Sciences.</p>
-    <p>I am currently doing a bachelor's in Computer Science.</p>
+    <p>Student at FAST University.</p>
+    <p>(Also known as National University of Computer and Emerging Sciences.)</p>
+    <p>Currently doing a bachelor's in Computer Science.</p>
+    <p>High School Diploma: Pre-Engineering (A/O'levels).</p>
 
     <h2>Credentials and Portfolio</h2>
     <p><a href="resume.html">My Resume </a>| <a href="https://github.com/i220957Ayishah">My GitHub</a></p>
