--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <img src="images/download.jpg" width="75%" alt="banner">
     <h1>Ayishah Chaudhry's Portal</h1>
 
-    <h2>About Me</h2>
+    <h2>About Me :</h2>
     <p>Student at FAST University.</p>
     <p>(Also known as National University of Computer and Emerging Sciences.)</p>
     <p>Currently doing a bachelor's in Computer Science.</p>
